Fri May 20 22:30:09 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* symbol.h (rb_id2sym): Use HAVE_BUILTIN___BUILTIN_CONSTANT_P

Fri May 20 22:19:00 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/date/date_core.c: [DOC] fix typos.
	  [fix GH-1360] patched by @soundasleep

Fri May 20 21:26:58 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/defines.h (RB_GNUC_EXTENSION, RB_GNUC_EXTENSION_BLOCK):
	  macros for skipping __extension__ on non-GCC compilers.
	* eval_error.c (warn_print): use RB_GNUC_EXTENSION_BLOCK instead of
	  __extension__ because __extension__ is a GNU extension.
	  Fix compile error on Solaris 10 with Oracle Solaris Studio 12.x.
	  [Bug #12397] [ruby-dev:49629].
	* internal.h (rb_fstring_cstr, rb_fstring_enc_cstr): ditto
	* include/ruby/encoding.h (rb_enc_str_new, rb_enc_str_new_cstr): ditto
	* include/ruby/intern.h (rb_str_new, rb_str_new_cstr,
	  rb_usascii_str_new, rb_utf8_str_new, rb_tainted_str_new_cstr,
	  rb_usascii_str_new_cstr, rb_utf8_str_new_cstr,
	  rb_external_str_new_cstr, rb_locale_str_new_cstr,
	  rb_str_buf_new_cstr, rb_str_cat_cstr, rb_exc_new_cstr): ditto

Fri May 20 21:17:13 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c (fole_missing): make substring or dup to
	  share the content if possible.

Fri May 20 19:48:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (NEW_PARTIAL_MEMO_FOR): shrink buffer array not to
	  mark non-VALUE fields.  fix check_rvalue_consistency abort with
	  RGENGC_CHECK_MODE=2.

	* internal.h (NEW_CMP_OPT_MEMO): exclude struct cmp_opt_data from
	  the valid array range.

	* enum.c (slicewhen_i): exclude inverted too.

Thu May 19 21:21:57 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* re.c (rb_reg_match_m_p): [DOC] fix return value in rdoc.

	* test/ruby/test_regexp.rb (TestRegexp#test_match_p): add some
	  tests from document.

Thu May 19 13:22:44 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl.c (Init_openssl): register an ex_data index for